# snakefood3

./: .gitignore  .pre-commit-config.yaml  .style.yapf  README.md  pyproject.toml  renovate.json  setup.py
.github/: renovate.json
.github/workflows/: build.yaml  ci.yaml  lint.yaml
example/: bgmi.dot  group
examples/: group
snakefood3/: __init__.py  __main__.py  gen_deps.py  graph.py  utils.py
tests/: test_gen_deps.py  test_utils.py
tests/fixture/foo/: external.py
tests/fixture/foo/command/connectivity/: netsh.py
tests/fixture/foo/command/power/: powrcfg.py
tests/fixture/foo/command/productivity/: excel.py
tests/fixture/foo/parser/: csv_parser.py  xml_parser.py
tests/fixture/foo/utils/: file_util.py  list_util.py  string_util.py
