[tool.poetry]
authors = ["Trim21 <trim21me@gmail.com>"]
description = "Dependency Graphing for Python3"
homepage = 'https://github.com/Trim21/snakefood3'
keywords = ['snakefood', 'snakefood3', 'dependency graph']
license = "GPL"
name = "snakefood3"
readme = 'README.md'
repository = 'https://github.com/Trim21/snakefood3'
version = "0.0.7"

[tool.poetry.dependencies]
Jinja2 = "^3.1.2"
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"

[tool.poetry.scripts]
snakefood3 = 'snakefood3.gen_deps:main'

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
