[tool.poetry]
authors = ["Trim21 <trim21me@gmail.com>"]
description = "Dependency Graphing for Python3"
homepage = 'https://github.com/Trim21/snakefood3'
keywords = ['snakefood', 'snakefood3', 'dependency graph']
license = "GPL"
name = "snakefood3"
readme = 'README.md'
repository = 'https://github.com/Trim21/snakefood3'
version = "0.0.7"

[tool.poetry.scripts]
snakefood3 = 'snakefood3.gen_deps:main'

[tool.poetry.dependencies]
Jinja2 = "^3.1.2"
python = "^3.7"


[tool.poetry.group.dev.dependencies]
coverage = { version = "^7.3.1", python = "^3.8" }
pytest = { version = "^8.0.0", python = "^3.9" }

[tool.ruff]
ignore = ["E501"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
