[build-system]
requires = ["flit-core==3.12.0"]
build-backend = "flit_core.buildapi"

[project]
name = "snakefood3"
version = "0.0.7"
requires-python = '~=3.7'
authors = [{ name = "trim21" }]
description = "Dependency Graphing for Python3"
keywords = ['snakefood', 'snakefood3', 'dependency graph']
license = "GPL-3.0-only"
readme = 'README.md'

dependencies = [
  "jinja2>=3.1.2",
]

[dependency-groups]
dev = [
  "coverage>=7.3.1; python_version >= '3.8'",
  "pytest>=8.0.0; python_version >= '3.9'",
]

[project.urls]
repository = 'https://github.com/Trim21/snakefood3'
homepage = 'https://github.com/Trim21/snakefood3'

[project.scripts]
snakefood3 = 'snakefood3.gen_deps:main'


[tool.ruff]
ignore = ["E501"]
